applications/welcome/overlay/b-team/welcome-sops-kustomize/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: welcome-sops-kustomize
    app.kubernetes.io/instance: welcome-sops-kustomize
  name: welcome
spec:
  selector:
    app: welcome-sops-kustomize
