applications/welcome/overlay/b-team/welcome-sops-kustomize/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: welcome-sops-kustomize
    app.kubernetes.io/instance: welcome-sops-kustomize
  name: welcome
spec:
  to:
    kind: Service
    name: welcome-sops-kustomize
    weight: 100
